Fix loading comments for Mastodon-style reposts